[gd_scene load_steps=14 format=3 uid="uid://r3go4y441qcm"]

[ext_resource type="Texture2D" uid="uid://damre8b7jjsye" path="res://Assets/0_Tutorial/Tutorial_VeracityEnv/Intro_Room/NewAssets/NewBookshelves/Secret_bookshelf_overlay.png" id="1_07ujo"]
[ext_resource type="Texture2D" uid="uid://ii21s1w7xawj" path="res://Assets/0_Tutorial/Tutorial_VeracityEnv/Intro_Room/NewAssets/NewBookshelves/Bookshelf_1.PNG" id="2_8tn55"]
[ext_resource type="Script" path="res://Scripts/0_Tutorial/TutorialEnv/SecretBookshelfDoorArea.gd" id="3_7fvb0"]
[ext_resource type="PackedScene" uid="uid://cylx63fkud7d5" path="res://Scenes/UniversalComponents/Areas/environment_exit_area.tscn" id="4_oe74d"]

[sub_resource type="Gradient" id="Gradient_uw63e"]
offsets = PackedFloat32Array(0, 0.392, 1)
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1, 0.555536, 0.290504, 0.265528, 0.733333)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_3hss7"]
gradient = SubResource("Gradient_uw63e")
fill_to = Vector2(0, 1)

[sub_resource type="Gradient" id="Gradient_fajrn"]
offsets = PackedFloat32Array(0, 0.00533333, 0.545455, 1)
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_rg24o"]
gradient = SubResource("Gradient_fajrn")
fill_to = Vector2(0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7g85e"]
size = Vector2(383, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_508ke"]
size = Vector2(90, 326)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t32bw"]
size = Vector2(142, 77)

[sub_resource type="Gradient" id="Gradient_apuv4"]
offsets = PackedFloat32Array(0, 0.3, 1)
colors = PackedColorArray(1, 0.793103, 0.126658, 1, 1, 0.733333, 0.0745098, 0.34902, 1, 0.643137, 0, 0)
metadata/_snap_enabled = true

[sub_resource type="GradientTexture2D" id="GradientTexture2D_wp0dx"]
gradient = SubResource("Gradient_apuv4")
width = 128
height = 128
fill = 1
fill_from = Vector2(0.495726, 0.474359)

[node name="SoloBookshelf" type="StaticBody2D"]
y_sort_enabled = true

[node name="Gradient2" type="Sprite2D" parent="."]
visible = false
position = Vector2(189, -136.5)
scale = Vector2(3.07813, 1.71875)
texture = SubResource("GradientTexture2D_3hss7")
offset = Vector2(0, 42.575)

[node name="Gradient1" type="Sprite2D" parent="."]
visible = false
position = Vector2(189, 129.02)
scale = Vector2(3.07813, 1.71875)
texture = SubResource("GradientTexture2D_rg24o")
offset = Vector2(0, -112.63)

[node name="SlidingSprite" type="Sprite2D" parent="."]
visible = false
z_index = 1
position = Vector2(188, -152)
texture = ExtResource("1_07ujo")

[node name="BookshelfSprite" type="Sprite2D" parent="."]
position = Vector2(188, -39.065)
texture = ExtResource("2_8tn55")
offset = Vector2(0, -112)

[node name="FirstCollision" type="CollisionShape2D" parent="."]
position = Vector2(191, -20)
shape = SubResource("RectangleShape2D_7g85e")

[node name="SecondCollision" type="CollisionShape2D" parent="."]
position = Vector2(45, -163)
shape = SubResource("RectangleShape2D_508ke")

[node name="SecondCollision2" type="CollisionShape2D" parent="."]
position = Vector2(332, -163)
shape = SubResource("RectangleShape2D_508ke")

[node name="DoorArea" type="Area2D" parent="."]
position = Vector2(192, 7.185)
scale = Vector2(1.61, 1.99)
script = ExtResource("3_7fvb0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DoorArea"]
position = Vector2(-3, -41.5)
shape = SubResource("RectangleShape2D_t32bw")

[node name="ExitArea" parent="." instance=ExtResource("4_oe74d")]
z_index = 2
position = Vector2(190, -163)
scale = Vector2(2.755, 1)
from_scene_name = "res://Scenes/0_Tutorial/Tutorial_VeracityEnv/Intro_Room.tscn"
to_scene_name = "res://Scenes/0_Tutorial/Tutorial_VeracityEnv/Cauldron_Room.tscn"
from_respawn_position = Vector2(1470, -1056)
to_spawn_position = Vector2(960, 1248)

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(192, -75)
scale = Vector2(1.755, 1.19)
energy = 2.32
shadow_color = Color(1, 0, 0, 1)
shadow_filter = 1
texture = SubResource("GradientTexture2D_wp0dx")
